<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.CustomDiceNumaricFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/min"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:ems="10"
                android:hint="@string/min"
                android:inputType="numberSigned"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/max"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/max"
                android:inputType="numberSigned"
                app:layout_constraintBaseline_toBaselineOf="@+id/min"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/multiple"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/multiple_of"
                android:inputType="numberSigned"
                app:layout_constraintEnd_toEndOf="@+id/min"
                app:layout_constraintStart_toStartOf="@+id/min"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <CheckBox
                android:id="@+id/evens"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:checked="true"
                android:text="@string/evens"
                app:layout_constraintEnd_toEndOf="@+id/max"
                app:layout_constraintTop_toBottomOf="@+id/max" />

            <CheckBox
                android:id="@+id/odds"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checked="true"
                android:text="@string/odds"
                app:layout_constraintEnd_toEndOf="@+id/evens"
                app:layout_constraintStart_toStartOf="@+id/evens"
                app:layout_constraintTop_toBottomOf="@+id/evens" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/min"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/max" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/multiple_of"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/min" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>