<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/rollResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="20"
            android:textSize="64sp"
            app:layout_constraintBottom_toTopOf="@+id/roll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/roll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/roll_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/nextDie"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/previousDie"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65" />

        <Button
            android:id="@+id/previousDie"
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:text="@string/left_arrow"
            app:layout_constraintBottom_toTopOf="@+id/moreOptions"
            app:layout_constraintEnd_toStartOf="@+id/diceSelected"
            app:layout_constraintTop_toBottomOf="@+id/roll" />

        <Button
            android:id="@+id/nextDie"
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:text="@string/right_arrow"
            app:layout_constraintBottom_toTopOf="@+id/moreOptions"
            app:layout_constraintStart_toEndOf="@+id/diceSelected"
            app:layout_constraintTop_toBottomOf="@+id/roll" />

        <TextView
            android:id="@+id/diceSelected"
            android:layout_width="149dp"
            android:layout_height="0dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="d20"
            android:textAllCaps="false"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/moreOptions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roll" />

        <Button
            android:id="@+id/moreOptions"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="48dp"
            android:text="@string/more_options"
            app:layout_constraintEnd_toEndOf="@+id/nextDie"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/previousDie"
            app:layout_constraintTop_toBottomOf="@+id/roll" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>